--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Metronic  - The World's #1 Selling Angular & Bootstrap Admin Template by KeenThemes</title>
+  <title>VeelsPlus</title>
   <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" href="./assets/media/logos/favicon.ico" />
+  <!-- <link rel="shortcut icon" href="./assets/media/logos/favicon.ico" /> -->
+  <link rel="icon" type="image/x-icon" href="./assets/media/logos/wheel.png">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700">
   <!-- SPLASH SCREEN-->
   <link rel="stylesheet" id="layout-styles-anchor" href="./assets/splash-screen.css" />
@@ -37,7 +38,7 @@
   </script>
   <!--end::Theme mode setup on page load-->
   <div id="splash-screen" class="splash-screen">
-    <img src="./assets/media/logos/default-small.svg" alt="Metronic logo" />
+    <!-- <img src="./assets/media/logos/default-small.svg" alt="Metronic logo" /> -->
     <span>Loading ...</span>
   </div>
 </body>
